--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
+file.reference.mongo-java-driver-2.9.3.jar=C:\\Users\\Gil\\Downloads\\mongo-2.9.3.jar\\mongo-2.9.3.jar
 user.properties.file=C:\\Users\\Gil\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
