--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
-file.reference.mongo-java-driver-2.9.3.jar=D:\\Documents\\GitHub\\ProyectoBD\\mongo-2.9.3.jar
-user.properties.file=C:\\Users\\fangi\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+file.reference.mongo-java-driver-2.9.3.jar=/Users/Gary/Documents/ITC/Quintosemestre/BD avanzadas/mongo-2.9.3.jar
+user.properties.file=/Users/Gary/Library/Application Support/NetBeans/8.1/build.properties
