--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -51,6 +51,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.mongo-java-driver-2.9.3.jar=mongo-java-driver-2.9.3-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
