--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/mongoCRUD.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.mongo-java-driver-2.9.3.jar=C:\\Users\\USER1\\Desktop\\Universidad\\Quinto semestre\\Bases de datos avanzadas\\ProyectoFinal\\mongo-java-driver-2.9.3.jar
+file.reference.mongo-2.9.3.jar=mongo-2.9.3.jar
+file.reference.mongo-java-driver-2.9.3-javadoc.jar=mongo-java-driver-2.9.3-javadoc.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mongo-java-driver-2.9.3.jar}
+    ${file.reference.mongo-2.9.3.jar}:\
+    ${file.reference.mongo-java-driver-2.9.3-javadoc.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -51,7 +53,6 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
-javadoc.reference.mongo-java-driver-2.9.3.jar=mongo-java-driver-2.9.3-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
